# esp-idf-rust-app

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
