[package]
name = "esp-idf-rust-app"
version = "0.1.0"
authors = ["Wang Zishi <ynh.2@outlook.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
embedded-hal = "1.0.0-alpha.9"

[build-dependencies]
embuild = "0.31.0"
