[package]
authors = ["Wang Zishi <ynh.2@outlook.com>"]
edition = "2021"
name = "esp-idf-rust-app"
resolver = "2"
version = "0.1.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z" 

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "1.0.0-alpha.9"
embedded-hal-nb = "1.0.0-alpha.1"
esp-idf-hal = "0.40.1"
esp-idf-sys = {version = "0.32.1", features = ["binstart", "alloc_handler", "panic_handler"]}

anyhow = "1.0.69"

[build-dependencies]
embuild = "0.31.0"
